<resources>
    <string name="app_name">WhatsApp</string>

    <string name="item_configuracao">Configurações</string>
    <string name="item_sair">Sair</string>
    <string name="logo">Logo</string>
    <string name="digite_o_seu_nome">Digite o seu nome</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="validar">Validar</string>
    <string name="digite_o_c_digo">Digite o Código</string>
    <string name="valida_o">Validação</string>
    <string name="voc_recebeu_um_sms_para_valida_o_do_seu_n_mero_digite_o_c_digo_de_valida_o_abaixo">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="bt_loggar">Loggar</string>
    <string name="texto_cadastrase">Não tem conta? Cadastra-se</string>
    <string name="title_activity_cadastrar_usuario">CadastrarUsuarioActivity</string>
    <string name="bt_sair">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mensagem">Mensagem</string>
    <string name="bot_o_enviar">Botão Enviar</string>
</resources>
